# fibonacci3

./: .gitignore  TODO  setup.cfg
fibonacci3/: main.py
