[metadata]
name = fibonacci3
version = 0.1
author = Ali Gottschall
description = Automatically resizes windows in i3 based on the golden ratio
[options]
packages = find:
install_requires = i3ipc
python_requires = >=3.6
setup_requires =
    setuptools>=42
    wheel

[options.entry_points]
console_scripts =
    fibonacci3 = fibonacci3.main:main
